force-app/main/default/objects/FF_Person_Account__c/fields/Valid_Will_In_Place__c.field-meta.xml
<CustomField>
    <fullName>Valid_Will_In_Place__c</fullName>
    <label>Valid will In place</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>