force-app/main/default/objects/FF_Person_Account__c/fields/Validated__c.field-meta.xml
<CustomField>
    <fullName>Validated__c</fullName>
    <label>Validation status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Overwritten</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Confirm Deletion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>