force-app/main/default/objects/FF_Person_Account__c/fields/ValidationType__c.field-meta.xml
<CustomField>
    <fullName>ValidationType__c</fullName>
    <description>Captures whether the FF record was automatically or manually validated. Used to report on value of automation.</description>
    <label>Validation type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>