force-app/main/default/objects/FF_Person_Account__c/fields/Working_Situation__c.field-meta.xml
<CustomField>
    <fullName>Working_Situation__c</fullName>
    <label>Working situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employment_Status</valueSetName>
    </valueSet>
</CustomField>