force-app/main/default/objects/FF_Person_Account__c/validationRules/Deletion.validationRule-meta.xml
<ValidationRule>
    <fullName>Deletion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Deleted__c = true,
ISPICKVAL(Validated__c, &quot;Validated&quot;)
)</errorConditionFormula>
    <errorDisplayField>Validated__c</errorDisplayField>
    <errorMessage>You cannot validate this record, it has been deleted by the client. You can only park it as Confirm Deletion or Rejected, if you think the deletion was made by the client in error.</errorMessage>
</ValidationRule>