force-app/main/default/objects/FF_Person_Account__c/validationRules/DeploymentPreventEditing.validationRule-meta.xml
<ValidationRule>
    <fullName>deploymentPreventEditing</fullName>
    <active>false</active>
    <description>Prevents editing while there is deployment activity ongoing, except for those with a custom permission that bypasses this rule.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
NOT($Permission.AdminWorkInDeploymentMode)
&amp;&amp;
$Setup.OW_business_configuration__c.DeploymentMode__c</errorConditionFormula>
    <errorMessage>Editing is temporarily disabled while deployment takes place. This should be finished in about 5 minutes. Do not leave this page so that your changes are maintained.</errorMessage>
</ValidationRule>