force-app/main/default/objects/FF_Person_Account__c/validationRules/rejectionReason.validationRule-meta.xml
<ValidationRule>
    <fullName>rejectionReason</fullName>
    <active>true</active>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
AND(
ISPICKVAL(Validated__c , &quot;Rejected&quot;),
ISBLANK(Reason_for_Rejection__c)
)</errorConditionFormula>
    <errorDisplayField>Reason_for_Rejection__c</errorDisplayField>
    <errorMessage>You need to add a reason for rejection.</errorMessage>
</ValidationRule>